syntax = "proto3";

package task;

service TaskService{
    rpc AddTask (AddTaskReq) returns (AddTaskRes);
    rpc GetTasks (GetTasksReq) returns (GetTasksRes);
}

message AddTaskReq{
    string token = 1;
    string title = 2;
    string description = 3;
}

message AddTaskRes{
    string message = 1;
    string taskId = 2;

}

message GetTasksReq{
    string token = 1;
}

message Task{
    string title = 1;
    string description = 2;
    string createdAt = 3;
    string author = 4;
}

message GetTasksRes{
    repeated Task tasks = 1;
}